# relava

./: .gitignore  Cargo.toml  DESIGN.md  IMPLEMENTATION-PLAN.md  README.md  release.toml
.github/workflows/: ci.yml  release.yml
crates/relava-cli/: Cargo.toml
crates/relava-cli/src/: api_client.rs  bulk_install.rs  cache.rs  cache_manage.rs  cli.rs  disable.rs  doctor.rs  enable.rs  env_check.rs  import.rs  info.rs  init.rs  install.rs  lifecycle_tests.rs  list.rs  lockfile.rs  main.rs  output.rs  publish.rs  registry.rs  remove.rs  resolver.rs  save.rs  search.rs  self_update.rs  server.rs  tools.rs  update.rs  update_check.rs  validate.rs
crates/relava-core/: Cargo.toml
crates/relava-core/src/: cache.rs  env_check.rs  lib.rs  manifest.rs  registry.rs  tools.rs  version.rs
crates/relava-core/src/store/: db.rs
crates/relava-server/: Cargo.toml
crates/relava-server-ext/: Cargo.toml  LICENSE
crates/relava-server-ext/src/: lib.rs
crates/relava-server/src/: lib.rs  main.rs  resolve.rs  routes.rs  seed.rs
crates/relava-server/src/store/: blob.rs  db.rs  dirs.rs  mod.rs  traits.rs
crates/relava-types/: Cargo.toml
crates/relava-types/src/: file_filter.rs  lib.rs  manifest.rs  validate.rs
default-skills/relava/: SKILL.md
docs/: docs.json  installation.mdx  introduction.mdx  mint.json  quickstart.mdx
docs/cli/: cache.mdx  disable-enable.mdx  doctor.mdx  import.mdx  info.mdx  init.mdx  install.mdx  list.mdx  publish.mdx  remove.mdx  resolve.mdx  search.mdx  server.mdx  update.mdx  validate.mdx
docs/concepts/: architecture.mdx  registry.mdx  resources.mdx
docs/configuration/: dependencies.mdx  global-options.mdx  relava-toml.mdx
docs/decisions/: agent-first-pivot-analysis-2026-03-23.md  oauth-delegation-analysis-design-2026-03-23.md
docs/enterprise/: overview.mdx
gui/: index.html  package-lock.json  package.json  vite.config.ts
gui/scripts/: deploy.sh
gui/src/: App.tsx
gui/src/api/: client.ts
gui/src/components/: ErrorMessage.tsx  Layout.tsx  LoadingSpinner.tsx
gui/src/hooks/: useChecksums.ts  useConfig.ts  useDependencies.ts  useHealth.ts  useResource.ts  useResources.ts  useSearch.ts  useStats.ts  useUpdateCheck.ts  useVersions.ts
gui/src/pages/: Browse.tsx  Dashboard.tsx  ResourceDetail.tsx  Settings.tsx
src/: cli.rs  main.rs  manifest.rs  validate.rs  version.rs
src/store/: blob.rs  db.rs  dirs.rs  mod.rs  models.rs  traits.rs
