[workspace]
members = [
    "crates/relava-types",
    "crates/relava-cli",
    "crates/relava-server",
    "crates/relava-server-ext",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "6"
rusqlite = { version = "0.34", features = ["bundled-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json", "multipart"] }
colored = "3"
comfy-table = "7"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { version = "0.6", features = ["fs"] }
