[workspace]
members = [
    "crates/relava-types",
    "crates/relava-cli",
    "crates/relava-server",
    "crates/relava-server-ext",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/relava/relava"
homepage = "https://github.com/relava/relava"

[workspace.dependencies]
# Inter-workspace crates
relava-types = { version = "0.1.0", path = "crates/relava-types" }
relava-server = { version = "0.1.0", path = "crates/relava-server" }

# Third-party
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
colored = "3"
comfy-table = "7"
dirs = "6"
flate2 = "1"
globset = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
rusqlite = { version = "0.34", features = ["bundled-full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["fs"] }
