[package]
name = "relava-cli"
description = "CLI binary for Relava — a local package manager for Claude Code prompt-layer artifacts"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "relava"
path = "src/main.rs"

[dependencies]
clap.workspace = true
dirs.workspace = true
relava-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
base64.workspace = true
tempfile = "3"
