[package]
name = "relava-cli"
description = "CLI binary for Relava — a local package manager for Claude Code prompt-layer artifacts"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/relava-cli"

[[bin]]
name = "relava"
path = "src/main.rs"

[dependencies]
base64.workspace = true
clap.workspace = true
colored.workspace = true
comfy-table.workspace = true
dirs.workspace = true
flate2.workspace = true
relava-types.workspace = true
reqwest.workspace = true
tar.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
serde_yaml.workspace = true
urlencoding = "2"

[dev-dependencies]
base64.workspace = true
filetime = "0.2"
flate2.workspace = true
mockito = "1"
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
