[package]
name = "relava-core"
description = "Core domain logic for Relava — store, manifest, validation, version"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
