[package]
name = "relava-server-ext"
description = "Cloud and enterprise extensions for the Relava server"
version.workspace = true
edition.workspace = true
license = "Elastic-2.0"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/relava-server-ext"

[dependencies]
relava-server.workspace = true
relava-types.workspace = true
