[package]
name = "relava-server"
description = "HTTP/API server for Relava — serves the web UI and REST API"
version.workspace = true
edition.workspace = true
license = "Elastic-2.0"

[dependencies]
axum.workspace = true
dirs.workspace = true
relava-types = { path = "../relava-types" }
rusqlite.workspace = true
tokio.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
