[package]
name = "relava-server"
description = "HTTP/API server for Relava — serves the web UI and REST API"
version.workspace = true
edition.workspace = true
license = "Elastic-2.0"

[dependencies]
axum.workspace = true
dirs.workspace = true
relava-types = { path = "../relava-types" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tar = "0.4"
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
