[package]
name = "relava-server"
description = "HTTP/API server for Relava — serves the web UI and REST API"
version.workspace = true
edition.workspace = true
license = "Elastic-2.0"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/relava-server"

[dependencies]
axum.workspace = true
dirs.workspace = true
relava-types.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tar.workspace = true
tokio.workspace = true
tower-http.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower = { version = "0.5", features = ["util"] }
