[package]
name = "relava-types"
description = "Shared types, validation, and version logic for Relava"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository = "https://github.com/relava/relava"
homepage = "https://github.com/relava/relava"
documentation = "https://docs.rs/relava-types"

[dependencies]
globset.workspace = true
serde.workspace = true
serde_yaml.workspace = true
toml.workspace = true
