[package]
name = "relava-types"
description = "Shared types, validation, and version logic for Relava"
version.workspace = true
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/relava-types"

[dependencies]
globset.workspace = true
serde.workspace = true
serde_yaml.workspace = true
toml.workspace = true
